reports: fixed always show scrollbar on init

--- a/scss/common.scss
+++ b/scss/common.scss
@@ -609,12 +609,14 @@ select::-ms-expand {
 
 .ps-scrollbar-x-rail {
   left: 180px !important;
-  top: 50px;
+  top: 50px !important;
+  width: calc(100% - 180px) !important;
   display: block !important;
   opacity: 0.6 !important;
   background-color: #eee !important;
 
   .ps-scrollbar-x {
     background-color: #999 !important;
+    min-width: 10px !important;
   }
 }
